[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot_sheets/SheetsConfig.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_sheets/icon_reload.svg" type="Texture" id=2]

[sub_resource type="GDScript" id=1]

script/source = "tool
extends TextEdit

func _set(property, value):
	if(property == \"text\"):
		emit_signal(\"text_changed\")

func _ready():
	connect(\"text_changed\",self,\"handle_text_change\",[],CONNECT_DEFERRED)

func handle_text_change():
	call_deferred(\"cursor_set_line\",get_line_count())"

[node name="SheetsConfig" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Script", "script" ]

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Godot Sheets Config"
resizable = true
_sections_unfolded = [ "Rect", "Theme" ]

[node name="padding" type="Control" parent="WindowDialog"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="content" type="VBoxContainer" parent="WindowDialog/padding"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="main" type="VBoxContainer" parent="WindowDialog/padding/content"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="SheetSelect" type="HBoxContainer" parent="WindowDialog/padding/content/main"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="WindowDialog/padding/content/main/SheetSelect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Sheet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menu" type="OptionButton" parent="WindowDialog/padding/content/main/SheetSelect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 248.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Size Flags" ]

[node name="refresh" type="Button" parent="WindowDialog/padding/content/main/SheetSelect"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_right = 280.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = false
align = 1
_sections_unfolded = [ "icon" ]

[node name="Errors" type="Control" parent="WindowDialog/padding/content/main"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 280.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="Log" type="TextEdit" parent="WindowDialog/padding/content/main/Errors"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 11
text = "Sign in, then you can set your sheet."
readonly = true
highlight_current_line = true
syntax_highlighting = false
show_line_numbers = true
breakpoint_gutter = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_enabled = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = SubResource( 1 )
_sections_unfolded = [ "Caret", "Margin", "Size Flags" ]

[node name="buttons" type="HBoxContainer" parent="WindowDialog/padding/content"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 280.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="SignIn" type="Button" parent="WindowDialog/padding/content/buttons"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sign In"
flat = false
align = 1
_sections_unfolded = [ "Custom Styles", "Size Flags", "custom_styles/normal" ]

[node name="Revoke" type="Button" parent="WindowDialog/padding/content/buttons"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_right = 280.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sign Out"
flat = false
align = 1
_sections_unfolded = [ "Custom Styles", "Size Flags", "custom_styles/normal" ]

[connection signal="item_selected" from="WindowDialog/padding/content/main/SheetSelect/menu" to="." method="_on_menu_item_selected"]
[connection signal="pressed" from="WindowDialog/padding/content/main/SheetSelect/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="WindowDialog/padding/content/main/SheetSelect/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="WindowDialog/padding/content/buttons/SignIn" to="." method="_on_SignIn_pressed"]
[connection signal="pressed" from="WindowDialog/padding/content/buttons/Revoke" to="." method="_on_Revoke_pressed"]
